--- a/buildout.cfg
+++ b/buildout.cfg
@@ -21,6 +21,7 @@ recipe = zc.recipe.egg:script
 eggs =
     docutils
     Sphinx
+    setuptools
 scripts = sphinx-build=docs
 base-sphinx-args = ('-N -c ${buildout:directory}/sphinx ${buildout:directory}/src/manuel ${buildout:directory}/docs'.split())
 arguments = sys.argv + ${sphinx-docs-html:base-sphinx-args}
@@ -34,14 +35,39 @@ on_update = true
 cmds = ${buildout:directory}/bin/docs
 
 [versions]
-Jinja2 = 2.6
-Pygments = 1.6
-Sphinx = 1.1.3
-distribute = 0.6.35
-docutils = 0.10
+Babel = 2.4.0
+Jinja2 = 2.9.6
+MarkupSafe = 1.0
+Pygments = 2.2.0
+Sphinx = 1.5.5
+alabaster = 0.7.10
+docutils = 0.13.1
 iw.recipe.cmd = 0.3
+pytz = 2016.10
+requests = 2.13.0
+snowballstemmer = 1.2.1
+zc.buildout = 2.9.4
+zc.recipe.egg = 2.0.4
 zc.recipe.testrunner = 2.0.0
-zope.exceptions = 4.0.6
-zope.interface = 4.0.5
-zope.testing = 4.1.2
-zope.testrunner = 4.3.3
+zope.testing = 4.6.2
+
+# Required by:
+# Sphinx==1.5.5
+imagesize = 0.7.1
+
+# Required by:
+# manuel==0
+# zope.testrunner==4.7.0
+six = 1.10.0
+
+# Required by:
+# zope.testrunner==4.7.0
+zope.exceptions = 4.1.0
+
+# Required by:
+# zope.testrunner==4.7.0
+zope.interface = 4.4.2
+
+# Required by:
+# zc.recipe.testrunner==2.0.0
+zope.testrunner = 4.7.0
