--- a/tox.ini
+++ b/tox.ini
@@ -1,6 +1,7 @@
 [tox]
+skip_missing_interpreters = True
 envlist =
-    py27,py33,py34,py35,pypy
+    py26,py27,py33,py34,py35,pypy
 
 [testenv]
 deps =
