--- a/.circleci/circleci.yaml
+++ b/.circleci/circleci.yaml
@@ -14,6 +14,12 @@ jobs:
       - checkout
 
       - run:
+          name: update tox
+          command: |
+            sudo apt update
+            sudo apt upgrade tox
+
+      - run:
           name: run tests
           command: |
             python setup.py test
