--- a/.circleci/circleci.yaml
+++ b/.circleci/circleci.yaml
@@ -3,8 +3,15 @@
 # Check https://circleci.com/docs/2.0/language-python/ for more details
 #
 version: 2
+depencencies:
+    pre:
+     - sudo apt update
+     - sudo apt-get --only-upgrade install tox
+
 jobs:
   build:
+    docker:
+      - image: circleci/python:3.6.1
 
     working_directory: ~/repo
 
