--- a/.travis.yml
+++ b/.travis.yml
@@ -6,6 +6,12 @@ python:
     - 3.5
     - 3.6
     - pypy
+    - pypy3
+matrix:
+    include:
+        - python: "3.7"
+          dist: xenial
+          sudo: true
 install:
     - travis_retry pip install .
     - travis_retry pip install zope.testing
