--- a/tox.ini
+++ b/tox.ini
@@ -1,7 +1,7 @@
 [tox]
 skip_missing_interpreters = True
 envlist =
-    py26,py27,py33,py34,py35,pypy
+    py27,py34,py35,py36,py37,pypy,pypy3
 
 [testenv]
 deps =
