--- a/.travis.yml
+++ b/.travis.yml
@@ -1,15 +1,21 @@
 language: python
 python:
     - 2.7
-    - 3.3
     - 3.4
     - 3.5
     - 3.6
+    - 3.7
     - pypy
+
 install:
     - travis_retry pip install .
     - travis_retry pip install zope.testing
+
 script:
     - python setup.py test -q
+
 notifications:
     email: false
+
+after_success:
+  - coveralls
