--- a/.travis.yml
+++ b/.travis.yml
@@ -1,18 +1,27 @@
 language: python
-python:
-    - 2.7
-    - 3.4
-    - 3.5
-    - 3.6
-    - 3.7
-    - pypy
+matrix:
+    include:
+        - os: linux
+          python: 2.7
+        - os: linux
+          python: 3.4
+        - os: linux
+          python: 3.5
+        - os: linux
+          python: 3.6
+        - os: linux
+          python: 3.7
+          dist: xenial
+          sudo: true
+        - os: linux
+          python: pypy
 
 install:
     - travis_retry pip install .
-    - travis_retry pip install zope.testing
+    - travis_retry pip install coveralls zope.testing
 
 script:
-    - python setup.py test -q
+    - coverage run setup.py test -q
 
 notifications:
     email: false
