--- a/.travis.yml
+++ b/.travis.yml
@@ -18,7 +18,7 @@ matrix:
 
 install:
     - travis_retry pip install .
-    - travis_retry pip install coveralls zope.testing
+    - travis_retry pip install coverage coveralls zope.testing
 
 script:
     - coverage run setup.py test -q
