--- a/tox.ini
+++ b/tox.ini
@@ -1,7 +1,7 @@
 [tox]
 skip_missing_interpreters = True
 envlist =
-    py27,py34,py35,py36,py37,pypy,pypy3,coverage
+    py27,py34,py35,py36,py37,py38,py39,py310,pypy,pypy3,coverage
 
 [testenv]
 deps =
