Documentation with resturucturedText and MyST

--- a/tox.ini
+++ b/tox.ini
@@ -20,3 +20,29 @@ commands =
     coverage erase
     coverage combine
     coverage report
+
+
+[testenv:docs]
+deps =
+    Sphinx
+    myst-parser
+    sphinx-book-theme<=0.3.99
+    sphinx-copybutton
+    sphinx-autobuild
+
+commands =
+    mkdir -p {toxinidir}/_build/docs
+    sphinx-build -c sphinx -b html -D html_theme="sphinx_book_theme" -d _build/docs/doctrees src/manuel _build/docs/html
+
+whitelist_externals =
+    mkdir
+
+
+[testenv:docs_livehtml]
+deps = {[testenv:docs]deps}
+
+commands =
+    mkdir -p {toxinidir}/_build/docs
+    sphinx-autobuild --ignore "*.swp" -c sphinx -b html -D html_theme="sphinx_book_theme" -d _build/docs/doctrees src/manuel _build/docs/html
+
+whitelist_externals = {[testenv:docs]whitelist_externals}
