--- a/.github/workflows/check.yml
+++ b/.github/workflows/check.yml
@@ -6,8 +6,8 @@ jobs:
     runs-on: ${{ matrix.os }}
     strategy:
       matrix:
-        os: [ubuntu-18.04, ubuntu-20.04, ubuntu-latest, macos-latest]
-        python-version: ['3.10', '3.9', '3.8']
+        os: [ubuntu-latest, macos-latest]
+        python-version: ['3.11', '3.10', '3.9', '3.8']
     steps:
       - uses: actions/checkout@v3
       - name: Set up Python
